--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p><strong>Pedro Parga</strong></p>
     <hr>
-    <h1>Mono Babuino</h1>
+    <h1>Pedro Parga Negreira</h1>
 
     <ul><em>Papio</em> es un género de primates catarrinos de la familia <em>Cercopithecidae</em> conocidos vulgarmente como papiones o babuinos. Se encuentran entre los mayores monos del viejo mundo. Diferentes familias del babuino:</ul>
     
@@ -22,12 +22,28 @@
         <li>Capuccino</li>
     </ol>
     <ul>
-        <li><a>https://es.wikipedia.org/wiki/Papio</a></li>
-        <li><a>https://www.monkeyworlds.com/es/babuino/</a></li>
-        <li><a>https://sp.depositphotos.com/stock-photos/monos-babuinos.html</a></li>
+        <li><a href="https://es.wikipedia.org/wiki/Papio">Wikipedia</a></li>
+        <li><a href="https://www.monkeyworlds.com/es/babuino/">Monkey Worlds</a></li>
+        <li><a href="https://sp.depositphotos.com/stock-photos/monos-babuinos.html">Monkey Photos</a></li>
 
     </ul>
     <img src="img/img.webp" alt="">
+
+    <h2> ejemplo formulario </h2>
+    <form action="Validar.php" method="get">
+        <label for="name">Name </label>
+        <input type="text" id="name" name="name" required>
+        <fieldset>
+            <legend> Languages </legend>
+            <input type="radio" name="Languages" value="English">
+            <label for="English">English</label>
+            <input type="radio" name="Languages" value="French">
+            <label for="French">French</label>
+            <input type="radio" name="Languages" value="Galician">
+            <label for="Galician">Galician</label>
+        </fieldset>
+        <button>Submit</button>
+    </form>
 
 </body>
 </html>
