--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p><strong>Pedro Parga</strong></p>
-    <hr>
     <h1>Pedro Parga Negreira</h1>
+    <p><strong>Mono babuino</strong></p>
+    <hr>
+    
 
     <ul><em>Papio</em> es un género de primates catarrinos de la familia <em>Cercopithecidae</em> conocidos vulgarmente como papiones o babuinos. Se encuentran entre los mayores monos del viejo mundo. Diferentes familias del babuino:</ul>
     
